--- a/data/player.ui
+++ b/data/player.ui
@@ -52,6 +52,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="headers_visible">False</property>
+                <property name="reorderable">True</property>
                 <property name="enable_search">False</property>
               </object>
             </child>
