--- a/data/cover.ui
+++ b/data/cover.ui
@@ -47,10 +47,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="lb_album">
+              <object class="GtkLabel" id="lb_artist">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Album</property>
+                <property name="label" translatable="yes">Artist</property>
+                <attributes>
+                  <attribute name="style" value="normal"/>
+                </attributes>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -59,10 +62,10 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="lb_artist">
+              <object class="GtkLabel" id="lb_album">
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
-                <property name="label" translatable="yes">Artist</property>
+                <property name="label" translatable="yes">Album</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -75,6 +78,9 @@
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Song</property>
+                <attributes>
+                  <attribute name="weight" value="bold"/>
+                </attributes>
               </object>
               <packing>
                 <property name="expand">False</property>
