--- a/data/cover.ui
+++ b/data/cover.ui
@@ -20,11 +20,13 @@
         <property name="visible">True</property>
         <property name="spacing">10</property>
         <child>
-          <object class="GtkImage" id="image1">
+          <object class="GtkImage" id="cover_image">
             <property name="width_request">100</property>
             <property name="height_request">100</property>
             <property name="visible">True</property>
-            <property name="pixbuf">images.jpg</property>
+            <property name="xalign">0</property>
+            <property name="yalign">0</property>
+            <property name="pixbuf">no-cover.jpg</property>
           </object>
           <packing>
             <property name="expand">False</property>
