--- a/data/player.ui
+++ b/data/player.ui
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="main">
     <property name="width_request">500</property>
-    <property name="title" translatable="yes">xmms2me</property>
+    <property name="title" translatable="yes">azucar</property>
     <property name="window_position">center</property>
     <property name="default_width">500</property>
     <property name="opacity">0.90000000000000002</property>
