--- a/data/player.ui
+++ b/data/player.ui
@@ -4,12 +4,13 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="main">
     <property name="width_request">500</property>
-    <property name="title" translatable="yes">azucar</property>
+    <property name="title" translatable="yes">Azucar</property>
     <property name="window_position">center</property>
     <property name="default_width">500</property>
     <property name="opacity">0.90000000000000002</property>
     <child>
       <object class="GtkVBox" id="vbox_content">
+        <property name="width_request">500</property>
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <child>
@@ -148,69 +149,39 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox_panels">
+          <object class="GtkVBox" id="panel_active">
             <property name="height_request">500</property>
             <property name="visible">True</property>
+            <property name="orientation">vertical</property>
             <child>
-              <object class="GtkVBox" id="panel_artists">
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkLabel" id="listas">
-                    <property name="visible">True</property>
-                    <property name="label" translatable="yes">playlists</property>
-                  </object>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <placeholder/>
-                </child>
+              <object class="GtkEntry" id="insearch">
+                <property name="can_focus">True</property>
+                <property name="invisible_char">&#x2022;</property>
               </object>
               <packing>
+                <property name="expand">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <object class="GtkVBox" id="panel_active">
+              <object class="GtkScrolledWindow" id="scrollplaylist">
                 <property name="visible">True</property>
-                <property name="orientation">vertical</property>
+                <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">never</property>
+                <property name="vscrollbar_policy">automatic</property>
                 <child>
-                  <object class="GtkEntry" id="insearch">
-                    <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x2022;</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkScrolledWindow" id="scrollplaylist">
+                  <object class="GtkTreeView" id="list_active">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">never</property>
-                    <property name="vscrollbar_policy">automatic</property>
-                    <child>
-                      <object class="GtkTreeView" id="list_active">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="headers_visible">False</property>
-                        <property name="enable_search">False</property>
-                        <property name="hover_selection">True</property>
-                      </object>
-                    </child>
+                    <property name="headers_visible">False</property>
+                    <property name="headers_clickable">False</property>
+                    <property name="reorderable">True</property>
+                    <property name="enable_search">False</property>
                   </object>
-                  <packing>
-                    <property name="position">1</property>
-                  </packing>
                 </child>
               </object>
               <packing>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -241,13 +212,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="bt_stop">
+              <object class="GtkButton" id="bt_pause">
                 <property name="width_request">24</property>
                 <property name="height_request">24</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="image">img_stop</property>
+                <property name="image">img_pause</property>
                 <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
                 <property name="xalign">0</property>
@@ -260,13 +231,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="bt_pause">
+              <object class="GtkButton" id="bt_stop">
                 <property name="width_request">24</property>
                 <property name="height_request">24</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="image">img_pause</property>
+                <property name="image">img_stop</property>
                 <property name="relief">none</property>
                 <property name="focus_on_click">False</property>
                 <property name="xalign">0</property>
@@ -372,33 +343,14 @@
       </object>
     </child>
   </object>
-  <object class="GtkImage" id="img_next">
-    <property name="visible">True</property>
-    <property name="xalign">0</property>
-    <property name="yalign">0</property>
-    <property name="pixbuf">icons/media-skip-forward.png</property>
-    <property name="icon-size">2</property>
-  </object>
-  <object class="GtkImage" id="img_options">
-    <property name="visible">True</property>
-    <property name="xalign">0</property>
-    <property name="yalign">0</property>
-    <property name="pixbuf">icons/options.png</property>
-    <property name="icon-size">2</property>
-  </object>
-  <object class="GtkImage" id="img_pause">
-    <property name="visible">True</property>
-    <property name="pixbuf">icons/media-playback-pause.png</property>
-    <property name="icon-size">2</property>
-  </object>
   <object class="GtkImage" id="img_prev">
     <property name="visible">True</property>
     <property name="pixbuf">icons/media-skip-backward.png</property>
     <property name="icon-size">2</property>
   </object>
-  <object class="GtkImage" id="img_play">
+  <object class="GtkImage" id="img_pause">
     <property name="visible">True</property>
-    <property name="pixbuf">icons/media-playback-start.png</property>
+    <property name="pixbuf">icons/media-playback-pause.png</property>
     <property name="icon-size">2</property>
   </object>
   <object class="GtkImage" id="img_stop">
@@ -408,11 +360,30 @@
     <property name="pixbuf">icons/media-playback-stop.png</property>
     <property name="icon-size">2</property>
   </object>
+  <object class="GtkImage" id="img_play">
+    <property name="visible">True</property>
+    <property name="pixbuf">icons/media-playback-start.png</property>
+    <property name="icon-size">2</property>
+  </object>
+  <object class="GtkImage" id="img_next">
+    <property name="visible">True</property>
+    <property name="xalign">0</property>
+    <property name="yalign">0</property>
+    <property name="pixbuf">icons/media-skip-forward.png</property>
+    <property name="icon-size">2</property>
+  </object>
   <object class="GtkImage" id="img_albums">
     <property name="visible">True</property>
     <property name="xalign">0</property>
     <property name="yalign">0</property>
     <property name="pixbuf">icons/music-library.png</property>
+    <property name="icon-size">2</property>
+  </object>
+  <object class="GtkImage" id="img_options">
+    <property name="visible">True</property>
+    <property name="xalign">0</property>
+    <property name="yalign">0</property>
+    <property name="pixbuf">icons/options.png</property>
     <property name="icon-size">2</property>
   </object>
 </interface>
