--- a/data/player.ui
+++ b/data/player.ui
@@ -177,6 +177,7 @@
                     <property name="headers_clickable">False</property>
                     <property name="reorderable">True</property>
                     <property name="enable_search">False</property>
+                    <property name="hover_selection">True</property>
                   </object>
                 </child>
               </object>
