--- a/data/player.ui
+++ b/data/player.ui
@@ -317,6 +317,7 @@
               <object class="GtkButton" id="bt_options">
                 <property name="width_request">24</property>
                 <property name="height_request">24</property>
+                <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="image">img_options</property>
