--- a/data/player.ui
+++ b/data/player.ui
@@ -108,9 +108,10 @@
         </child>
         <child>
           <object class="GtkProgressBar" id="playerbar">
-            <property name="width_request">500</property>
+            <property name="width_request">550</property>
             <property name="height_request">20</property>
             <property name="visible">True</property>
+            <property name="events">GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
             <property name="activity_mode">True</property>
             <property name="text_xalign">0</property>
             <property name="text_yalign">0</property>
