--- a/data/player.ui
+++ b/data/player.ui
@@ -287,11 +287,30 @@
               </packing>
             </child>
             <child>
+              <object class="GtkButton" id="bt_repeat">
+                <property name="width_request">24</property>
+                <property name="height_request">24</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="image">img_repeat</property>
+                <property name="relief">none</property>
+                <property name="focus_on_click">False</property>
+                <property name="xalign">0</property>
+                <property name="yalign">0</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">6</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkFixed" id="fixed3">
                 <property name="visible">True</property>
               </object>
               <packing>
-                <property name="position">6</property>
+                <property name="position">7</property>
               </packing>
             </child>
             <child>
@@ -311,7 +330,7 @@
                 <property name="expand">False</property>
                 <property name="fill">False</property>
                 <property name="pack_type">end</property>
-                <property name="position">7</property>
+                <property name="position">8</property>
               </packing>
             </child>
             <child>
@@ -385,6 +404,13 @@
     <property name="xalign">0</property>
     <property name="yalign">0</property>
     <property name="pixbuf">icons/options.png</property>
+    <property name="icon-size">2</property>
+  </object>
+  <object class="GtkImage" id="img_repeat">
+    <property name="visible">True</property>
+    <property name="xalign">0</property>
+    <property name="yalign">0</property>
+    <property name="pixbuf">icons/media-playlist-repeat.png</property>
     <property name="icon-size">2</property>
   </object>
 </interface>
